--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <servlet.version>3.1.0</servlet.version>
         <spring.web.mvc.version>4.3.9.RELEASE</spring.web.mvc.version>
         <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
+        <nekohtml.version>1.9.22</nekohtml.version>
         <router.core.version>1.0</router.core.version>
         <annotation.detector.version>3.0.5</annotation.detector.version>
 
@@ -107,6 +108,24 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-undertow</artifactId>
                 <version>${spring.boot.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-thymeleaf</artifactId>
+                <version>${spring.boot.version}</version>
+                <scope>provided</scope>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>slf4j-api</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>net.sourceforge.nekohtml</groupId>
+                <artifactId>nekohtml</artifactId>
+                <version>${nekohtml.version}</version>
                 <scope>provided</scope>
             </dependency>
 
