--- a/router-spring-mvc-core/pom.xml
+++ b/router-spring-mvc-core/pom.xml
@@ -27,8 +27,8 @@
         </dependency>
 
         <dependency>
-            <groupId>eu.infomas</groupId>
-            <artifactId>annotation-detector</artifactId>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
         </dependency>
 
 
